--- a/NEWS
+++ b/NEWS
@@ -49,18 +49,23 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   NoiseChisel:
     --kernel: value `none' will disable convolution.
 
+  Table:
+    --column: multiple columns (comma separated) can be used in one
+              instance of this option (multiple instances of this option
+              are still acceptable also).
+
   Libraries:
-   - `gal_fits_img_read': now only reads the data not the WCS, therefore it
-     no longer needs the last two arguments. A subsequent call to
-     `gal_wcs_read' can be used to read the WCS information in the file.
+    gal_fits_img_read: now only reads the data not the WCS, therefore it no
+        longer needs the last two arguments. A subsequent call to
+        `gal_wcs_read' can be used to read the WCS information in the file.
 
-   - `gal_statistics_quantile_function': returns `inf' or `-inf' if the
-     given value is smaller than the minimum or larger than the maximum of
-     the input dataset's range. Until now, it would return blank in such
-     cases.
+    gal_statistics_quantile_function: returns `inf' or `-inf' if the given
+        value is smaller than the minimum or larger than the maximum of the
+        input dataset's range. Until now, it would return blank in such
+        cases.
 
-   - `gal_statistics_number': the output dataset now has a `size_t'
-     type. Until now it was `uint64_t'.
+    gal_statistics_number: the output dataset now has a `size_t' type. Until
+        now it was `uint64_t'.
 
 ** Bug fixes
 
