Skewness of upperlimit random distribution can be reported
MakeCatalog currently only reports the basic statistics of the upper limit
distribution. There is no easy way to estimate the various properties of
the distribution. As the most simplest parameter, there is a column now
that will allow the user to ask the skewness of the distribution.

--- a/NEWS
+++ b/NEWS
@@ -16,6 +16,7 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
     --upperlimitsigma: position in random distribution (in units of sigma).
     --upperlimitquantile: position in random distribution (quantile).
     --upperlimitonesigma: 1sigma value of the random distribution.
+    --upperlimitskew: (mean-median)/sigma or skewness of random distribution.
 
   Statistics:
     --manualbinrange: histogram or CFP range can be outside of distribution.
