--- a/NEWS
+++ b/NEWS
@@ -85,6 +85,7 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   bug #53295: MakeCatalog parses area larger than clump.
   bug #53304: NoiseChisel crash when there is no detection.
   bug #53312: Fits crash on keyword editing (except --delete).
+  bug #53407: Instrumental noise in MakeNoise should be squared.
 
 
 
